overflow fixed

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -931,20 +931,19 @@ header{
   display: flex;
   position: fixed;
   z-index: 1001;
-  left: -100%;
-  top: 0;
+  left: -101%;
+  top: 0%;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   background: rgb(71, 63, 197, .4);
-  border: solid 1px var(--light-color);
   justify-content: center;
   align-items: center;
   transition: all ease-in-out .4s;
 
 } /* sliding window */
   .demo-modal.sliding{
-    top: 50% ;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
